2000-06-30  Derry Hamilton  <rasilon@tardis.ed.ac.uk>

	* Makefile.in: made .depend depend on config.h.  This should
	allow changing between checked and unchecked malloc without manual
	intervention.

2000-06-30  Richard Braakman  <dark@wapit.com>

	* gwlib/gwmem-check.c: Fix call to free() in drop_from_free_ring().
	This fixes a memory leak.

2000-06-29  Paul Keogh <paul.keogh@anam.ie>

	* gwlib/list.c: Removed unnecessary calls to lock() and unlock() 
	in the list_cat() function as the called functions do the required locking.
	Locking the same lock twice causes a panic().

2000-06-29  Richard Braakman  <dark@wapit.com>

	* gw/wsp-session.c: Fixed memory leak in new capability code.

2000-06-29  Richard Braakman  <dark@wapit.com>

	* gw/wap-appl.c: Applied fix suggested by Lim YoungLan, to make
	sure S-MethodInvoke.res is sent before any S-MethodResult, even
	if fetch_thread() is very fast.

2000-06-28  Richard Braakman  <dark@wapit.com>

	* wmlscript/wsstdlib.c: Applied Joerg Pommnitz's patch to support 
        WTAI standard library function calls, after converting it to the
	local indentation style.

2000-06-27  Kalle Marjola  <rpr@wapit.com>

	* doc/userguide/userguide.xml: did some updating, still needs to
	integrate newconf.txt and newbb.txt into it, but that some other
	day

2000-06-27  Paul Keogh <paul.keogh@anam.ie>

	* gw/cookies.c: Added a check for valid WSP session machine to prevent
	possible crash.

2000-06-26  Derry Hamilton <rasilon@tardis.ed.ac.uk>

	* gw/cookies.c: casted char to int for several isspace() etc. calls.
	Stops the compiler complaining under Solaris.

2000-06-26  Kalle Marjola  <rpr@wapit.com>

	* Making out stable release 0.10, branched as 'release_0_10'

2000-06-26  Kalle Marjola  <rpr@wapit.com>

	* gw/smsc_smpp.c: small fix by Mikael Gueck

2000-06-21  Kalle Marjola  <rpr@wapit.com>

	* gw/bb_boxc.c: added on-line information about connected boxes in
	status query

2000-06-20  Kalle Marjola  <rpr@wapit.com>
